--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,78 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.problem{
+  width: 665px;
+  height: 480px;
+  background: darkgrey;
+}
+.problem .outer_div{
+  position: absolute;
+  top: 65%;
+  left: 25%;
+  transform: translate(-50%,-50%);
+  width: 560px;
+  height: 380px;
+  border-radius: 10px;
+  transition: 0.5s;
+  background-color: #eee;
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.1));
 }
 
-.App-link {
-  color: #61dafb;
+.problem .inner_div{
+  display: block;
+  width: 400px;
+  height: 300px;
+  margin: 40px auto;
+  transition: 0.5s;
+  background: blue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.problem .outerClicked{
+  background-color: rebeccapurple;
+  transition: 0.5s;
+}
+
+.problem .innerClicked{
+  background-color: saddlebrown;
+  transition: 0.5s;
+}
+
+.solution{
+  width: 665px;
+  height: 480px;
+  margin-left: 20px;
+  background: darkgrey;
+}
+
+.solution .outer_div{
+  position: absolute;
+  top: 65%;
+  left: 75%;
+  transform: translate(-50%,-50%);
+  width: 560px;
+  height: 380px;
+  border-radius: 10px;
+  transition: 0.5s;
+  background-color: #eee;
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.1));
+}
+
+.solution .inner_div{
+  display: block;
+  width: 400px;
+  height: 300px;
+  transition: 0.5s;
+  margin: 40px auto;
+  background: blue;
+}
+
+.solution .outerClicked{
+  background-color: rebeccapurple;
+  transition: 0.5s;
+}
+
+.solution .innerClicked{
+  background-color: saddlebrown;
+  transition: 0.5s;
 }
